--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@tiptap/extension-heading": "^2.0.0-beta.202",
     "@tiptap/react": "^2.0.0-beta.202",
     "@tiptap/starter-kit": "^2.0.0-beta.202",
+    "axios": "^1.1.3",
+    "mongoose": "^6.7.2",
     "next": "13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
